Corrected link for card element and created new link out of featured work section. Decreased font size on smaller mobile devices. Set font size for paragraph on mobile.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,12 +56,23 @@ h1, h2, h3, h4, h5 {
 
 .header5 {font-size: 1.333em;}
 
+.paragraph {
+  color: #646464;
+  @media(max-width: 767px) {
+    font-size: 16px;
+  }
+
+}
+
 small, .text_small {font-size: 0.75em;}
 
 .gutter {
   padding: 60px;
   @media(max-width:767px) {
     padding: 30px;
+  }
+  @media(max-width:650px) {
+    padding: 15px;
   }
 }
 
